[feat] 파츠 정보 내려주는 응답값 수정